add supplementary material

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     <i class="fa fa-file"></i> <br/>
                     Paper
                 </a>
-                <a href="">
+                <a href="data/IV_supplementary.pdf">
                     <i class="fa fa-database"></i> <br/>
                     Supplementary
                 </a>
-                <a href="">
+                <a href="https://www.youtube.com/watch?v=B8osSrZEIrQ&ab_channel=AndreasGeiger">
                     <i class="fa fa-youtube-play"></i> <br/>
                     Video
                 </a>
