add supplementary material

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 
             <div class="project-icons">
                 <!-- TODO: add relevant links -->
-                <a href="">
+                <a href="http://www.cvlibs.net/publications/Hanselmann2021IV.pdf">
                     <i class="fa fa-file"></i> <br/>
                     Paper
                 </a>
-                <a href="">
+                <a href="data/IV_supplementary_compressed.pdf">
                     <i class="fa fa-database"></i> <br/>
                     Supplementary
                 </a>
-                <a href="">
+                <a href="https://www.youtube.com/watch?v=B8osSrZEIrQ&ab_channel=AndreasGeiger">
                     <i class="fa fa-youtube-play"></i> <br/>
                     Video
                 </a>
